# curso_C

./: CMakeLists.txt  video_1.c  video_2.c  video_3.c  video_4.c  video_5.c  video_6.c  video_7.c  video_8.c
